--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,16 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+
+// Overrides
+$tabs-ios-tab-font-size: 1.6rem;
+
+ion-tabs {
+
+  .tab-button {
+    min-height: 64px !important;
+    font-size: $tabs-ios-tab-font-size;
+  }
+
+}
