--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -43,15 +43,15 @@
   height: auto;
   position: relative;
   overflow: hidden;
-  -webkit-flex: row wrap;
-          flex: row wrap;
+  -webkit-flex-direction: row;
+  flex-direction: row;
   -webkit-justify-content: center;
-  -webkit-align-items: center;
   justify-content: center;
+  -webkit-align-items: center;
   align-items: center;
 
   .flex-item {
-    @include flex(0 auto);
+    @include flex(0 1 auto);
     @include order(1);
   }
 
@@ -71,42 +71,88 @@
             flex-direction: row-reverse;
   }
 
-  //Align-Content
-  .align-flex-start {
-    -webkit-align-items: flex-start;
-            align-items: flex-start;
+  .row-wrap {
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
   }
-  .align-flex-end {
-    -webkit-align-items: flex-end;
-            align-items: flex-end;
-  }
-  .align-space-between {
-    -webkit-align-items: space-between;
-            align-items: space-between;
-  }
-  .align-space-around {
-    -webkit-align-items: space-around;
-            align-items: space-around;
+  .row-nowrap {
+    -webkit-flex-wrap: nowrap;
+    flex-wrap: nowrap;
   }
 
-  //Justify-Content
-  .justify-flex-start {
-    -webkit-justify-content: flex-start;
-            justify-content: flex-start;
-  }
-  .justify-flex-end {
-    -webkit-justify-content: flex-end;
-            justify-content: flex-end;
-  }
-  .justify-space-between {
-    -webkit-justify-content: space-between;
-            justify-content: space-between;
-  }
-  .justify-space-around {
-    -webkit-justify-content: space-around;
-            justify-content: space-around;
-  }
 
+}
+
+//Align-Content
+.align-flex-start {
+  -webkit-align-items: flex-start;
+          align-items: flex-start;
+}
+.align-flex-end {
+  -webkit-align-items: flex-end;
+          align-items: flex-end;
+}
+.align-space-between {
+  -webkit-align-items: space-between;
+          align-items: space-between;
+}
+.align-space-around {
+  -webkit-align-items: space-around;
+          align-items: space-around;
+}
+.align-baseline {
+  -webkit-align-items: baseline;
+          align-items: baseline;
+}
+.align-stretch {
+  -webkit-align-items: stretch;
+          align-items: stretch;
+}
+
+
+//Align-Self
+.align-self-start {
+  -webkit-align-self: flex-start;
+          align-self: flex-start;
+}
+.align-self-end {
+  -webkit-align-self: flex-end;
+          align-self: flex-end;
+}
+.align-self-between {
+  -webkit-align-self: space-between;
+          align-self: space-between;
+}
+.align-self-around {
+  -webkit-align-self: space-around;
+          align-self: space-around;
+}
+.align-self-baseline {
+  -webkit-align-self: baseline;
+          align-self: baseline;
+}
+.align-self-stretch {
+  -webkit-align-self: stretch;
+          align-self: stretch;
+}
+
+
+//Justify-Content
+.justify-flex-start {
+  -webkit-justify-content: flex-start;
+          justify-content: flex-start;
+}
+.justify-flex-end {
+  -webkit-justify-content: flex-end;
+          justify-content: flex-end;
+}
+.justify-space-between {
+  -webkit-justify-content: space-between;
+          justify-content: space-between;
+}
+.justify-space-around {
+  -webkit-justify-content: space-around;
+          justify-content: space-around;
 }
 
 .height-full {
