--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -1,3 +1,10 @@
 page-tabs {
 
+  .icon-home {
+    background: url('../img/nav-icons/home.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+
+  }
+
 }
