--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -122,6 +122,7 @@ caption,tbody {
 
 @import "roboto";
 @import "noto-sans";
+@import "../assets/fonts/pacwest-icon";
 
 @font-face {
   font-family: "Brandon Grotesque";
