--- a/src/pages/location/location.scss
+++ b/src/pages/location/location.scss
@@ -2,7 +2,76 @@ page-location {
   #map {
     width: 100%;
     height: 100%;
+
+    .mapboxgl-ctrl.mapboxgl-ctrl-attrib {
+      display: none;
+    }
+
+    #filter-group-container {
+      position: absolute;
+      display: block;
+      background: white;
+      top: 80px;
+      right: calc(50% - 100px);
+      left: auto;
+      z-index: 1;
+      border-radius: 3px;
+      width: 200px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.32);
+
+      @include MQ(S) {
+        top: auto;
+        bottom: 80px;
+        // width: 240px;
+        // left: calc(50% - 120px);
+
+
+      }
+
+      .filter-group {
+        text-transform: uppercase;
+
+        input[type=checkbox]:first-child + label {
+            border-right: 1px solid rgba(0,0,0,0.08);
+            width: 78px;
+        }
+
+        label:last-child {
+            left: 0;
+            width: 74px;
+        }
+
+        input[type=checkbox] {
+          margin-left: 10px;
+          margin-bottom: 0;
+          height: 16px;
+          vertical-align: text-top;
+          display: inline-block;
+        }
+
+        input[type=checkbox] + label {
+            display: block;
+            cursor: pointer;
+            padding: 10px 10px 10px 6px;
+            margin: 0;
+            font-size: 15.625px;
+            font-weight: 600;
+
+            @include MQ(S) {
+              font-size: 13.5px;
+            }
+        }
+
+        input[type=checkbox] + label {
+            text-transform: capitalize;
+            display: inline-block;
+        }
+      }
+
+      .filter-group input[type=checkbox] + label:hover,
+      .filter-group input[type=checkbox]:checked + label {
+          // background-color: $white;
+      }
+    }
   }
-  //opacity: 0;
-  //transition: opacity 150ms ease-in
 }
