ADD GEOJSON; TODO: FIX LOCATION BUG
Added geojson to map box.

Need to fix bug on location page when reloading page more dom elements
are created. Need to convert to ion-checkbox.

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,8 +1,8 @@
 page-home {
 
   ion-content, ion-content.content-ios {
-    background-color: #FAFAFA;
-    background: url('../assets/img/hero_treated-sm.jpg') #FAFAFA;
+    background-color: #2e2e2f;
+    background: url('../assets/img/hero_treated-sm.jpg') #2e2e2f;
     background-position: 30% 10%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -10,7 +10,7 @@ page-home {
   }
 
   .full-background {
-    background: url('../assets/img/hero_treated-sm.jpg') #FAFAFA;
+    background: url('../assets/img/hero_treated-sm.jpg') #2e2e2f;
     background-position: 30% 10%;
     background-repeat: no-repeat;
     background-size: cover;
