--- a/src/pages/gallery/gallery.scss
+++ b/src/pages/gallery/gallery.scss
@@ -1,3 +1,12 @@
 page-gallery {
 
+  ion-content {
+    background-color: #2e2e2f !important;
+    //color: #FFFFFF !important;
+
+    .card-md + ion-card {
+      margin-top: 10px !important;
+    }
+  }
+
 }
