Add Map Updates
Working on porting map updates from website.

--- a/src/pages/location/location.scss
+++ b/src/pages/location/location.scss
@@ -3,12 +3,36 @@ page-location {
   ion-content {
     background: #2e2e2f !important;
   }
-  #map {
+
+  .map-container {
+    position:relative;
     width: 100%;
     height: 100%;
 
-    .mapboxgl-ctrl.mapboxgl-ctrl-attrib {
-      display: none;
+    #map {
+      width: 100%;
+      height: 100%;
+
+      .mapboxgl-ctrl.mapboxgl-ctrl-attrib {
+        display: none;
+      }
+
+      button#flyToCenter {
+        position: absolute;
+        z-index: 1;
+        top: 40px;
+        bottom: auto;
+        left: calc(50% - 75px);
+
+        border: none;
+        background: #fefefe;
+        color: #333;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.32);
+
+        &:hover {
+          background-color: #f2f2f2;
+        }
+      }
     }
 
     #filter-group-container {
@@ -28,11 +52,33 @@ page-location {
         bottom: 80px;
       }
 
+
+      ul {
+        text-align: inherit;
+
+        li {
+          border-bottom: 1px solid #ddd;
+          color: #333;
+
+          &:last-child {
+            border-bottom: none;
+          }
+
+          &:hover,
+          &:focus,
+          &:active,
+          &.active {
+            background-color: #f2f2f2;
+          }
+        }
+      }
+
       .filter-group {
         text-transform: uppercase;
 
-        input[type=checkbox]:first-child + label {
-            border-right: 1px solid rgba(0,0,0,0.08);
+        input[type=checkbox]:first-child + label,
+        input[type=radio]:first-child + label {
+            // border-right: 1px solid rgba(0,0,0,0.08);
             width: auto;
         }
 
@@ -41,21 +87,25 @@ page-location {
             width: auto;
         }
 
-        input[type=checkbox] {
+        input[type=checkbox],
+        input[type=radio]  {
           margin-left: 10px;
           margin-bottom: 0;
           height: 16px;
-          vertical-align: text-top;
+          // vertical-align: text-top;
+          vertical-align: sub;
           display: inline-block;
         }
 
-        input[type=checkbox] + label {
+        input[type=checkbox] + label,
+        input[type=radio] + label {
             display: block;
             cursor: pointer;
             padding: 10px 10px 10px 6px;
             margin: 0;
             font-size: 15.625px;
             font-weight: 600;
+            text-transform: uppercase;
 
             @include MQ(S) {
               font-size: 13.5px;
@@ -75,4 +125,5 @@ page-location {
       }
     }
   }
+
 }
