Location and Gallery Pages
Working on getting gallery page to function with viewing images.

Ported setting from location page on website over to app.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -299,7 +299,10 @@ ion-tabs {
 }
 .tabs-md .tab-button-text,
 .tabs-ios .tab-button-text {
-  font-family: $font-family-base;
+  font-family: "Raleway", "Roboto", "Helvitica Neue", sans-serif;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+
 }
 
 h1, h2, h3, h4, h5, h6, .title {
