--- a/src/pages/future/future.scss
+++ b/src/pages/future/future.scss
@@ -1,8 +1,8 @@
 page-future {
 
   ion-content {
-    background-color: #2e2e2f !important;
-    color: #FFFFFF !important;
+    background-color: $secondary !important;
+    color: $white !important;
     font-family: "Brandon Grotesque", "Raleway", -apple-system, "Helvitica Neue", sans-serif !important;
   }
 
