--- a/src/pages/floor-plans/floor-plans.scss
+++ b/src/pages/floor-plans/floor-plans.scss
@@ -1,4 +1,4 @@
-page-floorplans {
+page-floor-plans {
 
   ion-content {
     background-color: $secondary;
@@ -7,5 +7,7 @@ page-floorplans {
       background: $secondary;
     }
   }
+
+  
 
 }
