WORKING: Floor Plans Modals
Working on modals for floor plans.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -348,22 +348,11 @@ ion-footer {
   // background: $secondary;
 }
 
-#background.building {
-  background-image: url('../assets/img/floor-plans/building_min.png');
-  background-repeat: no-repeat;
-  background-size: 100%;
-
-  width: 72%;
-  height: 210%;
-  display: block;
-  z-index: -1;
-  position: absolute;
-  top: 100px;
-  left: -60px;
-
-  height: 1800px;
-  width: 860px;
+::-webkit-scrollbar {
+  display: none;
 }
+
+
 
 
 
