--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,6 +28,9 @@ $tabs-background:     #FAFAFA !default;
 $tabs-border-color:   #FAFAFA !default;
 $tabs-ios-border:     $hairlines-width solid $tabs-border-color !default;
 
+$modal-inset-width: 1200px;
+$modal-inset-height-large: 800px;
+
 
 
 // Named Color Variables
