--- a/src/pages/floor-plans/floor-plans.scss
+++ b/src/pages/floor-plans/floor-plans.scss
@@ -8,6 +8,128 @@ page-floor-plans {
     }
   }
 
-  
+  .flex-container {
+    width:924px;
+    float: right;
+    top: 584px;
+    // position: absolute;
+    right: calc(50% - 924px + 72px);
+  }
+
+  ion-list {
+    margin-bottom: 0 !important;
+
+    ion-item {
+
+      .item-inner {
+        overflow: visible;
+      }
+
+      ion-label {
+        overflow: visible;
+
+        &.label.label-md {
+          margin-top: 16px;
+          margin-bottom: 8px;
+
+          // margin-top: 10px;
+          // margin-bottom: 0;
+          margin-top: 12px;
+          margin-bottom: 2px;
+        }
+      }
+
+
+      h2 {
+        display: inline-block;
+
+        span {
+          font-size: 1.4rem;
+          // text-transform: uppercase;
+        }
+      }
+
+      button.item-button {
+        top: -5px;
+        margin-left: 16px;
+        margin-right: 10px;
+        padding: 0 1.1em !important;
+        height: 3.6rem !important;
+        box-shadow: none;
+      }
+    }
+  }
+
+
+
+  #background.building {
+    background-image: url('../assets/img/floor-plans/pacwest.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+
+    width: 100%;
+    height: 210%;
+    display: block;
+    z-index: -2;
+    position: absolute;
+    top: 100px;
+    left: 20px;
+
+    height: 2200px;
+    width: 2000px;
+
+    left: 5%;
+  }
+
+  .building {
+    position: absolute;
+    display: block;
+    top: 100px;
+    left: 5%;
+    opacity: .7;
+    height: 2200px;
+    width: 2000px;
+    z-index: -1;
+
+
+    &.ste2600 {
+      background-image: url('../assets/img/floor-plans/ste-2600-2700_1.png');
+      background-repeat: no-repeat;
+      background-size: 100%;
+    }
+    &.ste2200 {
+      background-image: url('../assets/img/floor-plans/ste-2200.png');
+      background-repeat: no-repeat;
+      background-size: 100%;
+    }
+    &.ste2050 {
+      background-image: url('../assets/img/floor-plans/ste-2050.png');
+      background-repeat: no-repeat;
+      background-size: 100%;
+    }
+    &.ste1400 {
+      background-image: url('../assets/img/floor-plans/ste-1400.png');
+      background-repeat: no-repeat;
+      background-size: 100%;
+    }
+    &.ste1220 {
+      background-image: url('../assets/img/floor-plans/ste-1220.png');
+      background-repeat: no-repeat;
+      background-size: 100%;
+    }
+    &.ste700 {
+      background-image: url('../assets/img/floor-plans/ste-700.png');
+      background-repeat: no-repeat;
+      background-size: 100%;
+    }
+    &.ste300 {
+      background-image: url('../assets/img/floor-plans/ste-300-400_1.png');
+      background-repeat: no-repeat;
+      background-size: 100%;
+    }
+
+  }
+
+
 
 }
