--- a/src/pages/floor-plans/floor-plans.scss
+++ b/src/pages/floor-plans/floor-plans.scss
@@ -6,24 +6,165 @@ page-floor-plans {
     .scroll-content {
       background: $secondary;
     }
+
+    .main-container {
+      max-width: 2200px;
+      position: relative;
+      display: block;
+      height: 100%;
+      width: 100%;
+      margin: 0 auto;
+
+      padding: 80px 180px 0px;
+
+      @include MQ(L) {
+        padding-left: 0;
+        padding-right: 0;
+      }
+
+      @include MQ(XL){
+        padding-left: 120px;
+        padding-right: 8%;
+      }
+
+      @include MQ(iPadPro_w & iPadPro_h) {
+        padding: 80px 0 0;
+      }
+    }
+  }
+
+  .header {
+    position: absolute;
+    display: block;
+    top: 120px;
+    right: 56px;
+
+    h1 {
+      text-transform: uppercase;
+      color: #FFF;
+      font-size: 4rem;
+
+      .primary-yellow {
+        color: $primary;
+      }
+    }
+
+    @include MQ(L) {
+      right: 80px;
+    }
+    @include MQ(XL) {
+      right: 8%;
+      top: 240px;
+    }
+    @include MQ(XXL) {
+      right: 16%;
+      top: 240px;
+
+      h1 {
+        font-size: 4.8rem;
+      }
+    }
+    @include MQ(iPadPro_w & iPadPro_h) {
+      right: 40px;
+
+      h1 {
+        font-size: 4.2rem;
+      }
+    }
+  }
+
+  @media (max-width: 1920px) {
+    .header {
+      padding: 0.3rem 0.8rem;
+    }
+
+    .flex-container {
+      max-width: 1080px;
+    }
   }
 
   .flex-container {
     width: 924px;
     float: right;
     top: 584px;
-    // position: absolute;
-    right: calc(50% - 924px + 72px);
 
+    top: 445px;
+    right: 40px;
+
+    width: 100%;
+    // max-width: 1240px;
 
     @include MQ(L) {
-      right: 40px;
-      top: 320px;
+      right: 80px;
     }
 
     @include MQ(XL) {
-      right: 8%;
+      right: 0px;
+      // top: 320px;
     }
+
+    @include MQ(XXL) {
+      // right: 16%;
+      // max-width: 57vw;
+    }
+
+    @include MQ(iPadPro_w & iPadPro_h) {
+      right: 40px;
+      top: 445px;
+      max-width: 1080px;
+    }
+  }
+
+  .ste-container {
+    display: inline-block;
+    background: white;
+    padding: 0.4rem 0.4rem;
+    float: right;
+
+    padding: 0.3rem 0.4rem;
+
+    padding: 0.3rem 0.6rem;
+
+    h2 {
+      display: inline-block;
+      font-size: 1.4rem;
+
+      font-size: 1.6rem;
+    }
+
+    button {
+      display: inline-block;
+      top: -6px;
+      border-radius: 0;
+      box-shadow: none;
+      font-size: 1.2rem;
+      padding: 0 1rem;
+      height: 3.2rem;
+    }
+  }
+
+  @media (max-width: 2400px) {
+    .ste-container {
+      padding: 0.3rem 0.8rem;
+
+      h2 {
+        font-size: 1.4rem;
+      }
+    }
+  }
+
+  ion-grid ion-row.row:before {
+    content: '';
+    background: #FFF;
+    width: calc(100% + 290px);
+    height: 60px;
+    position: absolute;
+    opacity: 0.7;
+    z-index: -2;
+    left: -300px;
+    margin-top: -4.5px;
+    right: 10px;
+    left: auto;
   }
 
   ion-list {
@@ -57,6 +198,14 @@ page-floor-plans {
           font-size: 1.4rem;
           // text-transform: uppercase;
         }
+
+        @include MQ(iPadPro_w & iPadPro_h) {
+          font-size: 1.4rem !important;
+
+          span {
+            font-size: 1.2rem;
+          }
+        }
       }
 
       button.item-button {
@@ -66,6 +215,11 @@ page-floor-plans {
         padding: 0 1.1em !important;
         height: 3.6rem !important;
         box-shadow: none;
+
+        // @include MQ(iPadPro_w & iPadPro_h) {
+        //   height: 2.8rem !important;
+        //   padding: 0 0.8rem !important;
+        // }
       }
     }
   }
@@ -73,7 +227,8 @@ page-floor-plans {
 
 
   #background.building {
-    background-image: url('../assets/img/floor-plans/pacwest.png');
+    // background-image: url('../assets/img/floor-plans/pacwest.png');
+    background-image: url('../assets/img/floor-plans/pacwest-building-floor-plans-min-2.png');
     background-repeat: no-repeat;
     background-size: 100%;
 
@@ -81,64 +236,90 @@ page-floor-plans {
     height: 210%;
     display: block;
     z-index: -2;
-    position: absolute;
-    top: 100px;
+    // position: absolute;
+    // top: 100px;
     left: 20px;
 
     height: 2200px;
     width: 2000px;
 
-    left: 5%;
+    height: 2020px;
+    width: 1840px;
+    opacity: 1;
+
+    left: 0;
+
+    @include MQ(L) {
+      left: -220px;
+      top:180px;
+      position: absolute;
+    }
+
+    @include MQ(XL) {
+      position: relative;
+    }
+
+    @include MQ(XXL) {
+      // left: 10%;
+    }
+
+    @include MQ(iPadPro_w & iPadPro_h) {
+      left: -140px;
+
+      left: -275px;
+      top: 0px;
+      position: absolute;
+    }
   }
 
-  .building {
-    position: absolute;
-    display: block;
-    top: 100px;
-    left: 5%;
-    opacity: .7;
-    height: 2200px;
-    width: 2000px;
-    z-index: -1;
-
-
-    &.ste2600 {
-      background-image: url('../assets/img/floor-plans/ste-2600-2700_1.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-    }
-    &.ste2200 {
-      background-image: url('../assets/img/floor-plans/ste-2200.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-    }
-    &.ste2050 {
-      background-image: url('../assets/img/floor-plans/ste-2050.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-    }
-    &.ste1400 {
-      background-image: url('../assets/img/floor-plans/ste-1400.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-    }
-    &.ste1220 {
-      background-image: url('../assets/img/floor-plans/ste-1220.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-    }
-    &.ste700 {
-      background-image: url('../assets/img/floor-plans/ste-700.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-    }
-    &.ste300 {
-      background-image: url('../assets/img/floor-plans/ste-300-400_1.png');
-      background-repeat: no-repeat;
-      background-size: 100%;
-    }
-
-  }
+  // .building {
+  //   position: absolute;
+  //   display: block;
+  //   top: 100px;
+  //   left: 5%;
+  //   opacity: .7;
+  //   height: 2200px;
+  //   width: 2000px;
+  //   z-index: -1;
+  //
+  //
+  //   &.ste2600 {
+  //     background-image: url('../assets/img/floor-plans/ste-2600-2700_1.png');
+  //     background-repeat: no-repeat;
+  //     background-size: 100%;
+  //   }
+  //   &.ste2200 {
+  //     background-image: url('../assets/img/floor-plans/ste-2200.png');
+  //     background-repeat: no-repeat;
+  //     background-size: 100%;
+  //   }
+  //   &.ste2050 {
+  //     background-image: url('../assets/img/floor-plans/ste-2050.png');
+  //     background-repeat: no-repeat;
+  //     background-size: 100%;
+  //   }
+  //   &.ste1400 {
+  //     background-image: url('../assets/img/floor-plans/ste-1400.png');
+  //     background-repeat: no-repeat;
+  //     background-size: 100%;
+  //   }
+  //   &.ste1220 {
+  //     background-image: url('../assets/img/floor-plans/ste-1220.png');
+  //     background-repeat: no-repeat;
+  //     background-size: 100%;
+  //   }
+  //   &.ste700 {
+  //     background-image: url('../assets/img/floor-plans/ste-700.png');
+  //     background-repeat: no-repeat;
+  //     background-size: 100%;
+  //   }
+  //   &.ste300 {
+  //     background-image: url('../assets/img/floor-plans/ste-300-400_1.png');
+  //     background-repeat: no-repeat;
+  //     background-size: 100%;
+  //   }
+  //
+  // }
 
 
 
