--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -56,6 +56,9 @@ $secondary: #2e2e2f;
 $white: #FDFDFD;
 $black: #121212;
 
+.primary, .primary-yellow {
+  color: $primary;
+}
 
 // App iOS Variables
 // --------------------------------------------------
