--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -354,8 +354,12 @@ h1, h2, h3, h4, h5, h6, .title, h1 span, h2 span, h3 span, h4 span {
   font-family: "Raleway", "Roboto", "Helvitica Neue", sans-serif;
   font-weight: 500;
 }
-section, article, p, span {
+section, article, p, span, ul, li {
   font-family: "Brandon Grotesque", "Raleway", "Roboto", "Helvitica Neue", sans-serif;
+}
+
+.no-bullet {
+  list-style: none;
 }
 
 .content-md {
