--- a/src/pages/vitals/vitals.scss
+++ b/src/pages/vitals/vitals.scss
@@ -7,4 +7,27 @@ page-vitals {
       color: $white;
     }
   }
+
+
+  .flex-container {
+    padding-top: 120px;
+
+    h1 {
+      text-transform: uppercase;
+      font-weight: 300;
+      font-size: 4rem;
+
+      span {
+        font-weight: 300;
+      }
+    }
+
+    p {
+      font-size: 1.8rem;
+    }
+
+    ul {
+      padding-left: 24px;
+    }
+  }
 }
