Revert "Clean Up pages"
This reverts commit d1972e12dc91a3705dcecb15121202f4d67dface.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -354,12 +354,8 @@ h1, h2, h3, h4, h5, h6, .title, h1 span, h2 span, h3 span, h4 span {
   font-family: "Raleway", "Roboto", "Helvitica Neue", sans-serif;
   font-weight: 500;
 }
-section, article, p, span, ul, li {
+section, article, p, span {
   font-family: "Brandon Grotesque", "Raleway", "Roboto", "Helvitica Neue", sans-serif;
-}
-
-.no-bullet {
-  list-style: none;
 }
 
 .content-md {
